removed padding on h2 to try and fix mobile spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,7 +70,7 @@ img {
 }
 
 .section {
-  padding: 4.5rem 0 2rem;
+  /* padding: 4.5rem 0 2rem; */
 }
 
 .section__title {
